# ordaa

./: .env.example  .gitignore  .gitlab-ci.yml  .golangci.yml  Cargo.toml  Dockerfile  Makefile  README.md  bot.py  config.ini.example  docker-compose.yaml  flake.nix  go.mod  go.sum  main.go  order-item.json  order.json  package-lock.json  package.json  sangam.json  tsconfig.json  user.json
.ssh/: id_ed25519  id_ed25519.pub
boundary/: http_server.go
boundary/auth/: auth.go
boundary/frontend/: admin.templ  frontend.go  index.templ  layout.templ  login.templ  menu.templ  menus.templ  order.templ  orders.templ  signup.templ
boundary/matrix/: handlers.go  handlers_test.go  matrix.go  matrix_mock.go
bruno/: collection.bru
cmd/: main.go
crypto/: crypto.go  crypto_test.go
entity/: db.go  errors.go  menu.go  menu_test.go  migrate.go  mock_repository.go  order.go  repository_mock.go  testing.go  user.go
galactus/: README.md  default.nix  go.mod  go.sum  main.go  main_test.go  order_handler.go  order_handler_test.go  queue.go  response_writer_spy.go  rest.go
html/: package-lock.json  package.json  svelte.config.js  vite.config.js
malenalau/: README.md  actions.go  default.nix  go.mod  go.sum  info.tpl  main.go  matrix.go  messageparser.go  servicefacade.go
migrations/: 20240106153136_create_menu_item.sql  20240106155649_create_menu.sql  20240106171807_create_menu_item.sql  20240109182547_order.sql  20240214001811_create_menu.up.sql  20240214001816_create_orders.up.sql
omega-star/: README.md  default.nix  go.mod  go.sum  main.go  rest.go  sangam.go  sangam_test.go
src/: app.ts  config.ts  db.rs  dto.rs  frontend.rs  main.rs  matrix-client-facade.ts  menu.rs  menu.ts  models.rs  search.rs  state-machine.ts  states.ts  users.rs
templates/: admin.html  base.html  index.html  menu.html  menus.html  order.html  orders.html
tools/: import_menu.go
(+205 files in other folders)
