[package]
name = "dotinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
# tera = "1.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = [ "sqlite", "r2d2", "returning_clauses_for_sqlite_3_35" ] }
diesel_migrations = "2.1.0"
askama = "0.12"
tantivy = "0.21.1"
chrono = "0.4.31"
