[package]
name = "dotinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = [ "sqlite", "r2d2", "returning_clauses_for_sqlite_3_35" ] }
diesel_migrations = "2.1.0"
askama_actix = "0.14"
askama = { version = "0.12", features = ["with-actix-web"] }
tantivy = "0.21.1"
chrono = "0.4.31"
itertools = "0.12.0"
