[package]
name = "dotinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
askama_actix = "0.14"
askama = { version = "0.12", features = ["with-actix-web"] }
tantivy = "0.21.1"
chrono = "0.4.31"
itertools = "0.12.0"
uuid = { version = "1.7.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }

